# nviwatch

./: Cargo.toml  README.md
.github/workflows/: build.yml
benchmarks/: package_sizes.csv  process_usage_1726162330.csv  process_usage_1726162524.csv  process_usage_1726165993.csv  process_usage_1726168299.csv  process_usage_summary.md  profile_benchmark.py  requirements.txt  visualise_benchmarks.py
src/: app_state.rs  main.rs
src/gpu/: info.rs  mod.rs  process.rs
src/ui/: mod.rs  render.rs  widgets.rs
src/utils/: formatting.rs  mod.rs  system.rs
